:lipstick: fix the broken layout

--- a/source/_sass/base.scss
+++ b/source/_sass/base.scss
@@ -358,7 +358,7 @@ section, article, nav, aside {
 }
 
 .recent-posts {
-  margin: 0 0.618em;
+  margin: 0 1.618em;
 }
 
 footer {
